--- a/2주차/질문.md
+++ b/2주차/질문.md
@@ -1,1 +1,28 @@
 # 2주차 질문 모음
+
+<
+
+### 지영
+
+- CISC와 RISC의 차이
+
+CISC는 RISC에 비해 연산에 처리되는 복잡한 명령어들을 탑재하고 있기 때문에 전력소모가 크고 속도가 느림. 다만, RISC는 CISC에 비해 하드웨어가 간단한 대신 명령어들을 조합하기 때문에 소프트웨어가 복잡해 질 수 있음. 사용범위도 다름
+
+- RISC가 단순하고 빠른 구조인데 왜 CISC를 사용하나
+
+많은 프로세서가 CISC로 구축되어 있어 모두 RISC로 변경하기에는 많은 비용이 소모되기 때문입니다. 또, 호환성이 RISC보다 높음
+
+- 캐시와 레지스터의 차이점
+
+캐시는 cpu와 별도로 있는 공간이며, 메인 메모리와 cpu 간의 속도 차이를 극복하기 위한 것
+레지스터는 cpu 안에서 연산을 처리하기 위하여 데이터를 저장하는 공간
+
+- 버퍼와 캐시의 차이
+
+둘다 속도가 다른 장치사이에서 속도차이를 메워주는 장치이나
+캐시는 속도향상을 위해, 버퍼는 데이터손실방지를 위해 사용한다는 차이점이 있음
+
+- 교체알고리즘 LFU와 LRU의 차이
+
+LFU 가장 사용횟수 적은페이지 교체 - 최근적재 페이지 교체우려
+LRU 가장 오랫동안 사용되지 않은 페이지 교체 (페이지가 사용될 시간을 예측)
