--- a/3주차/질문.md
+++ b/3주차/질문.md
@@ -1,1 +1,87 @@
 
+1) 운영 체제 란 무엇입니까?
+운영 체제는 컴퓨터 하드웨어가 컴퓨터 소프트웨어와 통신하고 작동하도록하는 소프트웨어 프로그램이다. 
+
+2) 운영 체제의 주요 목적은 무엇입니까?
+운영 체제에는 두 가지 주요 목적이 있다.
+1. 컴퓨터 시스템의 계산 활동을 관리하여 컴퓨터 시스템이 제대로 작동하도록 한다.
+2. 프로그램 개발 및 실행을 위한 환경을 제공한다.
+
+
+3) 프로세스란 무엇을 의미합니까?
+컴퓨터에서 실행되고 있는 프로그램을 프로세스라고 한다.
+두 가지 유형의 프로세스가 있다. 운영 체제 프로세스, 사용자 프로세스
+
+
+3-1) 프로세스의 특징을 설명하세요.
+
+- 프로세스는 각각 독립된 메모리 영역(Code, Data, Stack, Heap의 구조)을 할당받는다.
+- 기본적으로 프로세스당 최소 1개의 스레드(메인 스레드)를 가지고 있다.
+- 각 프로세스는 별도의 주소 공간에서 실행되며, 한 프로세스는 다른 프로세스의 변수나 자료구조에 접근할 수 없다.
+- 한 프로세스가 다른 프로세스의 자원에 접근하려면 프로세스 간의 통신(IPC, inter-process communication)을 사용해야 한다. (Ex. 파이프, 파일, 소켓 등을 이용한 통신 방법 이용)
+
+4) 스레드(Thread)는 무엇입니까?
+스레드는 CPU 사용의 기본 단위이다. 프로세스 내에서 실행되는 여러 흐름의 단위를 말한다. 
+스레드는 스레드 ID, 프로그램 카운터, 레지스터 세트 및 스택으로 구성된다.
+
+[참고] 운영체제는 자원을 효율적으로 사용하려고 한다. 스레드를 사용하면 프로세스보다 생성할 때 오버헤드도 적고 공유된 자원에 대해서도 오버헤드가 적다. 그리고 스레드를 이용하면 병렬성을 높일 수 있다.
+
+
+4-1) 스레드의 특징을 설명하세요.
+- 스레드는 프로세스 내에서 각각 Stack만 따로 할당받고 Code, Data, Heap 영역은 공유한다.
+- 프로세스 내의 주소 공간이나 자원들(힙 공간 등)을 같은 프로세스 내에 스레드끼리 공유하면서 실행된다.
+- 같은 프로세스 안에 있는 여러 스레드들은 같은 힙 공간을 공유한다. 반면에 프로세스는 다른 프로세스의 메모리에 직접 접근할 수 없다.
+- 각각의 스레드는 별도의 레지스터와 스택을 갖고 있지만, 힙 메모리는 서로 읽고 쓸 수 있다.
+- 한 스레드가 프로세스 자원을 변경하면, 다른 이웃 스레드(sibling thread)도 그 변경 결과를 즉시 볼 수 있다.
+- 
+4-2) 프로세스와 스레드의 차이는 무엇입니까?
+프로세스는 운영체제로부터 자원을 할당받는 작업의 단위이고, 스레드는 프로세스가 할당받은 자원을 이용하는 실행의 단위 이다. 프로세스는 운영체제로부터 메모리, 주소 공간 등을 할당받고 쓰레드는 할당받은 자원들을 내부 스레드끼리 공유하면서 실행된다. 
+
+[정리]
+- 프로세스는 실행 중인 프로그램으로 다른 프로세스와 상관없이 독립적으로 자원을 할당 받는다.
+- 스레드는 경량화된 프로세스로 프로세스 안에 존재한다. 각 스레드는 별도의 레지스터와 스택을 갖고, 힙 영역은 공유한다.
+스레드를 사용하는 이유는 운영체제에서 더 효율적으로 시스템 자원을 관리하기 위해 사용된다고 할 수 있다. 멀티 프로세스로 진행되는 작업을 멀티 쓰레드로 수행하게 되면 시스템 콜이 줄어들기 때문에, 자원을 효율적으로 관리 할 수 있고 프로세스의 통신비용보다 쓰레드간의 통신 비용이 적다는 이점도 있다.
+단 스레드간의 자원공유는 전역변수를 이용하므로 동기화 문제에 신경을 써야하며 멀티스레드 프로그래밍은 프로그래머의 주의를 요구한다.
+
+
+4-3) 스레드의 장점?
+- 스레드는 프로세스보다 생성 및 종료시간, 스레드간 전환시간이 짧다.
+- 스레드는 프로세스의 메모리, 자원등을 공유하므로 커널의 도움없이 상호간의 통신이 가능하다.
+
+4-4) 멀티 스레딩(Multi-threading) 의 장점과 단점은?
+- 멀티 스레딩이란 하나의 프로세스를 다수의 스레드로 만들어 실행하는 것
+
+장점) 
+- 하나의 프로세스 내에 다수의 실행 단위들이 존재하여 작업의 수행에 필요한 자원들을 공유하기 때문에 자원의 생성과 관리가 중복되는 것을 줄일 수 있다.
+단점)
+- 교착상태를 발생시킬 수 있다.
+- 동기화에 주의해야한다.
+
+4-5) 멀티 프로세스 대신 멀티 스레드를 사용하는 이유는 무엇입니까?
+- 쉽게 설명하면, 프로그램을 여러 개 키는 것보다 하나의 프로그램 안에서 여러 작업을 해결하는 것이다.
+- 자원의 효율성 증대
+: 멀티 프로세스로 실행되는 작업을 멀티 스레드로 실행할 경우, 프로세스를 생성하여 자원을 할당하는 시스템 콜이 줄어들어 자원을 효율적으로 관리할 수 있다. (프로세스 간의 Context Switching시 단순히 CPU 레지스터 교체 뿐만 아니라 RAM과 CPU 사이의 캐시 메모리에 대한 데이터까지 초기화되므로 오버헤드가 크기 때문)
+: 스레드는 프로세스 내의 메모리를 공유하기 때문에 독립적인 프로세스와 달리 스레드 간 데이터를 주고받는 것이 간단해지고 시스템 자원 소모가 줄어들게 된다.
+- 처리 비용 감소 및 응답 시간 단축
+: 프로세스 간의 통신(IPC)보다 스레드 간의 통신의 비용이 적으므로 작업들 간의 통신의 부담이 줄어든다. (스레드는 Stack 영역을 제외한 모든 메모리를 공유하기 때문)
+: 프로세스 간의 전환 속도보다 스레드 간의 전환 속도가 빠르다. (Context Switching시 스레드는 Stack 영역만 처리하기 때문)
+
+4-6) 멀티 프로세싱과 멀티프로그래밍의 차이는?
+멀티 프로세싱은 여러개의 처리장치(CPU)를 장착하여 동시에 여러 작업을 병렬로 실행하는 방법.
+멀티 프로그래밍은 다수 개의 프로그램의 같이 주기억장치에 있도록 한 방식.
+
+7) 힙 영역과 스택영역의 차이점을 설명하시오. 
+
+프로그램이 실행되기 위해 프로그램이 메모리에 로드가 되어야한다. 따라서 운영체제에서 프로그램의 실행을 위해 다향한 메모리 공간을 제공한다. 코드, 데이터, 스택, 힙 영역이 할당되고 각 역할은 다음과 같다.
+
+코드 :  실행할 프로그램의 코드가 저장되는 텍스트 영역이다. CPU는 코드영역에서 저장된 명령어를 하나씩 가져가서 처리한다.
+데이터 :  전역변수와 정적변수가 이해 해당된다. 프로그램의 시작과 함께 할당되며 프로그램이 종료되면 소멸된다.
+스택   :  스택영역은 함수의 호출과 관계되는 지역변수와 매개변수가 저장되는 영역이다. 함수의 호출과 함께 할당되며, 함수의 호출이 종료될때 해제된다.
+힙  :  힙 영역은 사용자가 직접 관리할 수 있는 메모리 영역이다. 힙 영역은 사용자에 의해 메모리공간이 동적으로 할당되고 해제된다.
+
+자바 스레드란?
+일반 스레드와 거의 차이가 없으며, JVM이 운영체제의 역할을 합니다.
+자바는 프로세스가 존재하지 않고 스레드만 존재합니다.
+자바 스레드는 JVM에 의해 스케줄링되는 코드블록입니다.
+개발자는 스레드 코드를 작성하고 JVM에 실행을 요청합니다.
+ 
