--- a/4주차/[혜민]운영체제-(5)시스템콜.md
+++ b/4주차/[혜민]운영체제-(5)시스템콜.md
@@ -6,9 +6,9 @@
 
 운영체제는 **커널 모드(Kernel Mode)** 와 **사용자 모드(User Mode)** 로 나뉘어  구동
 
-> - 커널모드
+> - 커널모드</br>
 >   운영체제가 CPU의 제어권을 가지고 운영체제 코드를 실행하는 모드로서, 이 모드에서는 모든 종류의 명령을 다 실행할 수 있음
-> - 사용자 모드
+> - 사용자 모드</br>
 >   일반 사용자 프로그램이 실행되며 제한적인 명령만을 수행할 수 있음
 >
 > ⇒  시스템에 중요한 영향을 미치는 연산은 **커널 모드**에서만 실행 가능하도록 함으로써 하드웨어의 보안을 유지
@@ -17,9 +17,9 @@
 
 
 
-통상적으로 시스템 콜은 여러 종류의 기능으로 나뉘어져있음
-각 시스템 콜에는 번호가 할당되고 시스템 콜 인터페이스는 이러한 번호에 따라 인덱스 되는 테이블을 유지
-아래 그림은 open() 시스템 콜을 호출했을 때 운영체제에서 처리되는 과정
+통상적으로 시스템 콜은 여러 종류의 기능으로 나뉘어져있음</br>
+각 시스템 콜에는 번호가 할당되고 시스템 콜 인터페이스는 이러한 번호에 따라 인덱스 되는 테이블을 유지</br>
+아래 그림은 open() 시스템 콜을 호출했을 때 운영체제에서 처리되는 과정</br>
 
 ![img](https://t1.daumcdn.net/cfile/tistory/25333241535CCEE810)
 
@@ -29,7 +29,7 @@
 
 1. 매개 변수를 CPU 레지스터 내에 전달. 이 경우에 매개변수의 갯수가 CPU 내의 총 레지스터 개수보다 많을 수 있음
 2. 위와 같은 경우에 매개변수를 메모리에 저장하고 **메모리의 주소가 레지스터에 전달**
-3. 매개변수는 프로그램에 의해 **스택으로 전달(push)** 될 수도 있음
+3. 매개변수는 프로그램에 의해 **스택으로 전달(push)**될 수도 있음
 
 *2번이나 3번의 방법의 경우, 전달되는 매개변수의 갯수나 길이에 제한이 없기 때문에 몇몇 OS에서 선호하는 방식*
 
@@ -61,23 +61,23 @@
 
     - 프로세스 생성과 관련
 
-      - exec() 
-        자신을 수행 가능한 다른 프로세스로 대치 수행 
-        단순 fork는 동일한 프로세스의 내용을 여러 번 동작할 때 사용
-        child에서는 parent와 다른 동작을 하고 싶을 때는 exec를 사용할 수 있음
+      - exec() </br>
+        자신을 수행 가능한 다른 프로세스로 대치 수행 </br>
+        단순 fork는 동일한 프로세스의 내용을 여러 번 동작할 때 사용</br>
+        child에서는 parent와 다른 동작을 하고 싶을 때는 exec를 사용할 수 있음</br>
 
-        exec가 실행되면 `execvp(실행파일, 전달 인자)` 함수는, code segment 영역에 실행 파일의 코드를 읽어와서 덮어씌움
-        씌운 이후에는 heap, stack, 다른 메모리 영역이 초기화 되고, os는 그냥 실행.
+        exec가 실행되면 `execvp(실행파일, 전달 인자)` 함수는, code segment 영역에 실행 파일의 코드를 읽어와서 덮어씌움</br>
+        씌운 이후에는 heap, stack, 다른 메모리 영역이 초기화 되고, os는 그냥 실행.</br>
 
-      - fork() 
-        현재의 프로세스 이미지를 복사하고 child 프로세스를 만듦
-         fork()가 실행되는 순간 프로세스가 하나 더 생기는데, 이 때 생긴 프로세스(Child)는 fork를 만든 프로세스(Parent)와 (almost) 동일한 복사본을 가짐
-        **이때 os는 똑같은 2개의 프로그램이 동작한다고 생각하고, fork()가 return될 차례라고 생각**
-        그러나 child와 parent의 fork()값이 다름. 따라서 완전히 동일한 복사본이라고 할 수는 없음
+      - fork() </br>
+        현재의 프로세스 이미지를 복사하고 child 프로세스를 만듦</br>
+         fork()가 실행되는 순간 프로세스가 하나 더 생기는데, 이 때 생긴 프로세스(Child)는 fork를 만든 프로세스(Parent)와 (almost) 동일한 복사본을 가짐</br>
+        **이때 os는 똑같은 2개의 프로그램이 동작한다고 생각하고, fork()가 return될 차례라고 생각</br>**
+        그러나 child와 parent의 fork()값이 다름. 따라서 완전히 동일한 복사본이라고 할 수는 없음</br>
 
-    - wait() 
-      프로세스(parent)가 만든 다른 프로세스(child)가 끝날 때까지 기다리는 명령어
-      parent가 먼저 실행되더라도, wait()는 child가 끝나기 전에는 return하지 않으므로, 반드시 child가 먼저 실행
+    - wait() </br>
+      프로세스(parent)가 만든 다른 프로세스(child)가 끝날 때까지 기다리는 명령어</br>
+      parent가 먼저 실행되더라도, wait()는 child가 끝나기 전에는 return하지 않으므로, 반드시 child가 먼저 실행</br>
 
   - pipe : 파이프
 
