--- a/4주차/질문.md
+++ b/4주차/질문.md
@@ -1,1 +1,58 @@
 
+💡 스케줄러란?
+
+💡 스케줄링 단계를 설명해주세요.
+
+💡 스케줄링이 무엇인지와 목적을 설명해주세요
+
+💡 Context Switching이 뭐에요?
+
+💡 PCB에 저장되는 정보는 어떤 것들이 있나요?
+
+💡 비선점방식과 선점방식을 설명해주세요.
+
+💡 Round Robin 스케줄링이 뭐에요?
+
+💡 스케줄링 기법 중 FCFS의 단점과 해결 방법을 설명해주세요.
+
+
+---
+💡 스케줄러란?
+
+어떤 프로세스에게 자원을 할당할지 결정하는 운영체제의 커널 모듈입니다.
+
+💡 스케줄링 단계를 설명해주세요.
+
+장기 스케줄러에 의해 어떤 프로세스가 준비 큐에 삽입될지 결정합니다.
+Ready Queue란 현재 메모리 내에 있으면서 CPU에 의해 실행되기를 기다리는 프로세스의 집합을 의미합니다.
+단기 스케줄러는 스케줄링 알고리즘에 따라 CPU를 할당할 프로세스를 선택합니다.
+선택된 프로세스는 Running 상태가 되고 작업이 끝나면 Terminated 상태가 됩니다.
+중기 스케줄러는 메모리에 너무 많은 프로그램이 동시에 올라가는 것을 조절합니다.
+
+💡 스케줄링이 무엇인지와 목적을 설명해주세요.
+
+스케줄링은 프로세서에게 필요한 자원을 어떻게 할당할 것인지 선택하는 알고리즘 입니다.
+단위 시간당 처리량을 최대화하고 효율적으로 자원을 할당하기 위한 목적을 가지고 있습니다.
+
+💡 Context Switching이 뭐에요? ✏️
+
+Context Switching이란 하나의 프로세스가 CPU를 사용 중인 상태에서 다른 프로세스가 CPU를 사용하도록 하기 위해, 이전의 프로세스의 상태(문맥)를 보관하고 새로운 프로세스의 상태를 적재하는 작업을 말한다.
+
+💡 PCB에 저장되는 정보는 어떤 것들이 있나요?
+
+PID(프로세스 식별자), PS(프로세스 상태), PC(프로그램 카운터)등의 프로세스 정보가 있습니다.
+PCB란? 메모리에 저장되는 프로세스 관련 정보 데이터 블록으로 스케줄링 및 문맥교환에 필요합니다.
+
+💡 비선점방식과 선점방식을 설명해주세요.
+
+비선점 방식은 프로세스가 CPU를 점유하고 있는 경우 다른 프로세스가 CPU를 빼앗지 못하는 방식입니다. 비선점방식은 CPU를 중간에 가로채지 않기 때문에 응답시간 예측이 용이하다는 장점이 있지만 중요한 작업이 오래 기다리는 경우가 발생할 수 있다는 단점이 있습니다.
+선점 방식은 프로세스가 CPU를 점유하고 있어도 우선 순위가 높은 프로세스가 오면 CPU를 빼앗을 수 있는 방식입니다. 선점방식은 우선 순위가 높은 프로세스가 빠르게 처리할 수 있다는 장점이 있지만 잦은 Context Switching으로 오버헤드가 증가한다는 단점이 있습니다.
+
+💡 Round Robin 스케줄링이 뭐에요?
+
+스케줄링 방식 중 시분할 시스템을 위해 설계된 선점 방식의 알고리즘 입니다. 각 프로세스는 같은 크기의 CPU 시간을 할당받게 됩니다. 할당된 시간 안에 작업이 끝나지 않으면 해당 프로세스는 ready 큐에 들어가는 선입선출 방식입니다.
+
+💡 스케줄링 기법 중 FCFS의 단점과 해결 방법을 설명해주세요.
+
+FCFS 는 대기 큐에 도착한 순서에 따라 CPU를 할당합니다. 그래서 긴 작업이 짧은 작업을 오랫 동안 기다릴 수 있습니다.
+단점을 해결하는 방법으로는 준비 큐에서 기다리고 있는 프로세스 중 가장 CPU 요구량이 적은 것을 먼저 실행시켜 주는 SJF(Shortest Job First)가 있습니다.
