--- a/5주차/질문.md
+++ b/5주차/질문.md
@@ -1,1 +1,24 @@
+💡 교착상태 vs 기아상태</br>
+교착상태는 둘 이상의 프로세스들이 자원을 점유한 상태에서 서로 다른 프로세스가 점유하고 있는 자원을 요구하며 무한정 기다리는 상황입니다.</br>
+기아상태는 병행 프로세스에서 프로세스가 실행되는데에 필수적인 자원을 끊임없이 사용하지 못하는 상황입니다.
 
+
+💡 운영 체제에서 에이징(Aging)는 무엇입니까?</br>
+aging이란 프로세스의 대기 시간에 비례하는 높은 우선순위를 부여하여 가까운 시간 안에 자원을 할당하는 기법입니다.</br>
+Priority 스케줄링에서 기아 상태 및 무한정 대기를 에이징으로 해결할 수 있습니다.</br>
+
+
+💡 외부 단편화와 내부 단편화란?</br>
+내부 단편화는 프로세스가 필요한 양보다 더 큰 메모리 공간에 할당되어 메모리가 낭비되는 것을 말합니다.</br>
+외부 단편화는 메모리에 프로세스가 할당될 만큼 충분한 공간이 존재하지만 공간이 쪼개어져서 프로세스를 넣을 수 없는 것을 의미합니다.</br>
+
+
+💡 메모리 단편화 해결 기법에 대해 설명하시오.</br>
+가상메모리를 이용하여 내부 단편화 기법을 해결하는 세그멘테이션과 외부 단편화를 해결하는 페이징 기법이 있습니다.</br>
+Segmentation은 메모리를 서로 크기가 다른 논리적인 블록 단위인 세그먼트로 분할하여 메모리를 할당하는 기법입니다.</br>
+Paging은 프로세스를 일정 크기인 페이지로 잘라서 메모리에 적재하는 방식입니다.</br>
+
+
+💡 페이징의 장점과 단점은? </br>
+페이징 기법을 사용하게되면 하나의 프로세스가 사용하는 메모리 공간이 연속적이어야 한다는 제약을 없애 외부 단편화 문제점을 해결할 수 있습니다.</br>
+하지만 그만큼 Mapping 과정 또한 늘어나기 때문에 Trade-Off 가 발생할 수 있습니다. 그리고 보통 페이지 단위에 알맞게 꽉채워 쓰는게 아니므로 내부 단편화 문제는 여전히 있습니다.
