--- a/9주차/[지영]9주차.md
+++ b/9주차/[지영]9주차.md
@@ -1,2 +1,3 @@
-[1](https://github.com/Talia2019/CS/blob/main/Network/LoadBalancing.md)
-[2](https://github.com/Talia2019/CS/blob/main/Network/Blocking&NonBlocking.md)
+[load balancing](https://github.com/Talia2019/CS/blob/main/Network/LoadBalancing.md)
+
+[ Blocking/Non-blocking & Synchronous/Asynchronous](https://github.com/Talia2019/CS/blob/main/Network/Blocking&NonBlocking.md)
